# axhal_crates

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
axhal_cpu/: Cargo.toml  all.html  fn.disable_irqs.html  fn.enable_irqs.html  fn.flush_tlb.html  fn.halt.html  fn.init_gdt.html  fn.init_idt.html  fn.irqs_enabled.html  fn.read_page_table_root.html  fn.read_thread_pointer.html  fn.wait_for_irqs.html  fn.write_page_table_root.html  fn.write_thread_pointer.html  index.html  sidebar-items.js  struct.ExtendedState.html  struct.FxsaveArea.html  struct.GdtStruct.html  struct.IdtStruct.html  struct.TaskContext.html  struct.TaskStateSegment.html  struct.TrapFrame.html
axhal_cpu/cpu/: fn.current_task_ptr.html  fn.init_percpu_variable.html  fn.set_current_task_ptr.html  fn.this_cpu_id.html  fn.this_cpu_is_bsp.html  index.html  sidebar-items.js
axhal_cpu/src/: cpu.rs  lib.rs  trap.rs
axhal_cpu/trap/: attr.def_trap_handler.html  attr.register_trap_handler.html  fn.handle_syscall.html  index.html  sidebar-items.js  static.IRQ.html  static.PAGE_FAULT.html  static.SYSCALL.html  struct.PageFaultFlags.html
axhal_cpu/x86_64/: fn.disable_irqs.html  fn.enable_irqs.html  fn.flush_tlb.html  fn.halt.html  fn.irqs_enabled.html  fn.read_page_table_root.html  fn.read_thread_pointer.html  fn.wait_for_irqs.html  fn.write_page_table_root.html  fn.write_thread_pointer.html  struct.TaskStateSegment.html
axhal_plat/: all.html  attr.impl_plat_interface.html  attr.main.html  attr.secondary_main.html  fn.call_main.html  fn.call_secondary_main.html  index.html  macro.console_print.html  macro.console_println.html  sidebar-items.js
axhal_plat/console/: fn.read_bytes.html  fn.write_bytes.html  index.html  trait.ConsoleIf.html
axhal_plat/init/: fn.platform_init.html  fn.platform_init_secondary.html  index.html  sidebar-items.js  trait.InitIf.html
axhal_plat/irq/: fn.handle.html  fn.register.html  fn.set_enable.html  fn.unregister.html  index.html  struct.HandlerTable.html  trait.IrqIf.html  type.IrqHandler.html
axhal_plat/mem/: constant.DEFAULT_MMIO_FLAGS.html  constant.DEFAULT_RAM_FLAGS.html  constant.DEFAULT_RESERVED_FLAGS.html  fn.check_sorted_ranges_overlap.html  fn.clear_bss.html  fn.mmio_ranges.html  fn.phys_ram_ranges.html  (+10 more)
axhal_plat_impl/: Cargo.toml  all.html  build.rs  index.html
axhal_plat_impl/config/: constant.ARCH.html  constant.PLATFORM.html  index.html  sidebar-items.js
axhal_plat_impl/config/devices/: constant.MMIO_RANGES.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.VIRTIO_MMIO_RANGES.html  index.html  sidebar-items.js
axhal_plat_impl/config/plat/: constant.FAMILY.html  constant.KERNEL_ASPACE_BASE.html  constant.KERNEL_ASPACE_SIZE.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.PHYS_BUS_OFFSET.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  index.html
axhal_plat_impl/src/: lib.rs
axhal_plat_macros/: all.html  attr.main.html  attr.secondary_main.html  index.html
axplat_aarch64_common/: all.html  index.html  macro.console_if_impl.html  macro.irq_if_impl.html  macro.time_if_impl.html  sidebar-items.js
(+140 files in other folders)
