[workspace]
resolver = "2"

members = [
    "axhal_cpu",
    "axhal_plat",
    "axhal_plat_macros",
    "axplat-cli",
    "axhal_plat_impl",
    "platforms/axplat-dummy",
    "platforms/axplat-x86-pc",
    "platforms/axplat-aarch64-common",
    "platforms/axplat-aarch64-qemu-virt",
    "platforms/axplat-aarch64-raspi",
    "platforms/axplat-riscv64-qemu-virt",
    "platforms/axplat-aarch64-bsta1000b",
    "platforms/axplat-aarch64-phytium-pi",
]

[workspace.package]
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "Su Mingxian <aarkegz@gmail.com>",
    "RobertYuan <634954435@qq.com>",
    "hky1999 <keyang.hu@qq.com>",
]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/axhal_crates"
repository = "https://github.com/arceos-org/axhal_crates"
