[package]
name = "axhal_plat_impl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[features]
x86-pc = ["axplat-x86-pc"]
riscv64-qemu-virt = ["axplat-riscv64-qemu-virt"]
aarch64-qemu-virt = ["axplat-aarch64-qemu-virt"]
aarch64-raspi = ["axplat-aarch64-raspi"]
aarch64-bsta1000b = ["axplat-aarch64-bsta1000b"]
aarch64-phytium-pi = ["axplat-aarch64-phytium-pi"]

fp_simd = ["axplat-x86-pc?/fp_simd", "axplat-aarch64-qemu-virt?/fp_simd", "axplat-aarch64-raspi?/fp_simd", "axplat-riscv64-qemu-virt?/fp_simd", "axplat-aarch64-bsta1000b?/fp_simd", "axplat-aarch64-phytium-pi?/fp_simd"]
irq = ["axplat-x86-pc?/irq", "axplat-aarch64-qemu-virt?/irq", "axplat-aarch64-raspi?/irq", "axplat-riscv64-qemu-virt?/irq", "axplat-aarch64-bsta1000b?/irq", "axplat-aarch64-phytium-pi?/irq"]
rtc = ["axplat-x86-pc?/rtc", "axplat-aarch64-qemu-virt?/rtc", "axplat-aarch64-raspi?/rtc", "axplat-riscv64-qemu-virt?/rtc", "axplat-aarch64-bsta1000b?/rtc", "axplat-aarch64-phytium-pi?/rtc"]
smp = ["axplat-x86-pc?/smp", "axplat-aarch64-qemu-virt?/smp", "axplat-aarch64-raspi?/smp", "axplat-riscv64-qemu-virt?/smp", "axplat-aarch64-bsta1000b?/smp", "axplat-aarch64-phytium-pi?/smp"]

[dependencies]
cfg-if = "1.0"
axplat-dummy = { path = "../platforms/axplat-dummy" }
axconfig-gen-macros = { version = "0.1.0", features = ["nightly"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
axplat-x86-pc = { path = "../platforms/axplat-x86-pc", optional = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt = { path = "../platforms/axplat-riscv64-qemu-virt", optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
axplat-aarch64-qemu-virt = { path = "../platforms/axplat-aarch64-qemu-virt", optional = true }
axplat-aarch64-raspi = { path = "../platforms/axplat-aarch64-raspi", optional = true }
axplat-aarch64-bsta1000b = { path = "../platforms/axplat-aarch64-bsta1000b", optional = true }
axplat-aarch64-phytium-pi = { path = "../platforms/axplat-aarch64-phytium-pi", optional = true }
axplat-aarch64-common = { path = "../platforms/axplat-aarch64-common" }